--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "git://github.com/sjorek/goatee-rules.git"
   },
   "dependencies": {
+    "goatee-script": "~0.1"
   },
   "devDependencies": {
     "coffee-script": "~1.6",
