--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "PATH=$PATH:./node_modules/.bin jasmine-node --growl --coffee --color --verbose ./src/Tests ./lib/Tests"
   },
-  "homepage":     "http://goat.ee/rules",
+  "homepage":     "https://github.com/sjorek/goatee-rules/",
   "bugs":         "https://github.com/sjorek/goatee-rules/issues",
   "repository":   {
     "type": "git",
