--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "coffee-script": "~1.6",
     "jison": "~0.4",
     "benchmark": "~1.0",
+    "groc": "~0.4",
     "jasmine-node": "~1.11"
   },
   "readmeFilename": "README.md"
