--- a/package.json
+++ b/package.json
@@ -28,14 +28,42 @@
     "url": "git://github.com/sjorek/goatee-rules.git"
   },
   "dependencies": {
-    "goatee-script": "sjorek/goatee-script"
+    "goatee-script.js": "sjorek/goatee-script.js",
+    "nomnom": "~1.8"
   },
   "devDependencies": {
-    "coffee-script": "~1",
-    "jison": "~0.4",
-    "benchmark": "~1.0",
-    "groc": "nevir/groc",
-    "jasmine-node": "~1"
+    "benchmark": "^2.1.0",
+    "coffee-script": "^1.10.0",
+    "cson": "^3.0.2",
+    "del": "^2.2.0",
+    "groc": "^0.8.0",
+    "gulp": "^3.9.1",
+    "gulp-beautify": "^2.0.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-coffee": "^2.3.2",
+    "gulp-conventional-changelog": "^1.1.0",
+    "gulp-cson": "^0.4.0",
+    "gulp-footer": "^1.0.5",
+    "gulp-git": "^1.7.1",
+    "gulp-groc": "iamdenny/gulp-groc",
+    "gulp-header": "^1.7.1",
+    "gulp-jasmine": "^2.3.0",
+    "gulp-logger": "0.0.2",
+    "gulp-npm-check": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-template": "^4.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "jasmine": "^2.4.1",
+    "jison": "^0.4.17",
+    "map-stream": "0.0.6",
+    "npm-check": "^5.2.1",
+    "path": "^0.12.7",
+    "publish-please": "^1.3.10",
+    "require-cson": "^0.1.0",
+    "run-sequence": "^1.1.5"
   },
   "readmeFilename": "README.md"
 }
