updated package recipe and raised version

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "goatee-rules.js",
   "description": "Goatee is the missing complement for handlebar mustaches.",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "keywords": ["Goatee", "Node.js", "Browser", "Template", "Framework"],
   "author": "Stephan Jorek <stephan.jorek@gmail.com>",
   "licenses":     [{
     "type":       "Apache",
-    "url":        "https://raw.github.com/sjorek/goatee-rules/master/LICENSE"
+    "url":        "https://raw.github.com/sjorek/goatee-rules.js/master/LICENSE"
   },{
     "type":       "MIT",
     "url":        "https://raw.github.com/jashkenas/coffee-script/master/LICENSE"
@@ -19,13 +19,15 @@
   },
   "main": "./lib/GoateeRules.js",
   "scripts": {
-    "test": "PATH=$PATH:./node_modules/.bin jasmine-node --growl --coffee --color --verbose ./src/Tests ./lib/Tests"
+    "build": "PATH=$PATH:./node_modules/.bin gulp build",
+    "test": "PATH=$PATH:./node_modules/.bin gulp test",
+    "doc": "PATH=$PATH:./node_modules/.bin gulp doc"
   },
-  "homepage":     "https://github.com/sjorek/goatee-rules/",
-  "bugs":         "https://github.com/sjorek/goatee-rules/issues",
+  "homepage":     "https://github.com/sjorek/goatee-rules.js/",
+  "bugs":         "https://github.com/sjorek/goatee-rules.js/issues",
   "repository":   {
     "type": "git",
-    "url": "git://github.com/sjorek/goatee-rules.git"
+    "url": "git://github.com/sjorek/goatee-rules.js"
   },
   "dependencies": {
     "nomnom": "~1.8"
