- switch license to 3-clause BSD - remove .groc.json as i'll be rebuild and update .gitignore accordingly - add goatee-script.js to dependencies - raise nodejs engine requirement to ≥6 - rebuild documentation - fix test spec

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .DS_Store
 
 # Generated folders from build process
+.groc.json
 /build
 temp*
 
@@ -12,8 +13,4 @@ components
 # Coverage report
 coverage*
 
-# Eclipse specific stuff
-.project
-.settings*
-.externalToolBuilders*
 
